--- a/webpageWithNodeJs/src/views/contact.ejs
+++ b/webpageWithNodeJs/src/views/contact.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web page with nodeJS</title>
+    <% include partials/head.ejs %>
+    <title><%=title %></title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <% include partials/navigation.ejs %>
+    
 </body>
 </html>
