--- a/electronApp/src/views/index.html
+++ b/electronApp/src/views/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>New window</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+    <title>Electron Products</title>
 </head>
 <body>
 
-    <h1>Hello electron and reload...</h1>
+    
     
 </body>
 </html>
