--- a/electronApp/src/views/newProduct.html
+++ b/electronApp/src/views/newProduct.html
@@ -1,1 +1,68 @@
-<h1> hello new window </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/cyborg/bootstrap.min.css"
+    />
+    <title>Add a new Product</title>
+  </head>
+  <body>
+    <form class="p-4">
+      <div class="form-group">
+        <input
+          type="text"
+          id="name"
+          class="from-control"
+          placeholder="Product's name"
+          autofocus
+        />
+      </div>
+      <div class="form-group">
+        <input
+          type="number"
+          id="price"
+          class="from-control"
+          placeholder="Product's price"
+        />
+      </div>
+      <div class="form-group">
+        <textarea
+          type="text"
+          id="description"
+          class="from-control"
+          placeholder="Product's description"
+          rows="6"
+          maxlength="100"
+        ></textarea>
+      </div>
+      <button class="btn btn-primary btn-block">
+            Save Product
+      </button>
+    </form>
+
+    <script>
+
+        const { ipcRenderer } = require('electron');
+
+        const form = document.querySelector('form');
+        form.addEventListener('submit', e =>{
+            const nameProduct = document.querySelector('#name').value;
+            const priceProduct = document.querySelector('#price').value;
+            const descProduct = document.querySelector('#description').value;
+
+            const newProduct = {
+                name:nameProduct,
+                price:priceProduct,
+                description:descProduct
+            }
+            
+            ipcRenderer.send('new-product', newProduct);
+            e.preventDefault();
+        })
+    </script>
+  </body>
+</html>
